# synix

./: .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN.md  README.md  SECURITY.md  example.env  llms.txt  pipeline.py  pipeline_topical.py  pyproject.toml
.claude/: CLAUDE.sync.md
.claude-plugin/: marketplace.json
.githooks/: pre-commit
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/prompts/: claude_review.md  openai_review.md
.github/scripts/: blind_review.py
.github/workflows/: blind-review.yml  ci.yml  llms-txt.yml  release.yml
deploy/: Containerfile  README.md  compose.yml  pipeline.py  synix-server.toml  synix.toml
deploy/prompts/: builder.txt  ideator.txt  operator.txt  researcher.txt  summarizer.txt  synthesizer.txt  task-builder.txt  task-core-memory.txt  task-core.txt  task-episode.txt  task-idea-garden.txt  task-ideator.txt  task-long-window.txt  task-open-threads.txt  task-operator.txt  task-research.txt  task-researcher.txt  task-self-model.txt  task-short-window.txt  task-user-model.txt  task-work-status.txt  task-working-memory.txt  tracker.txt  writer.txt
deploy/smoke-test/: run.sh
docs/: BACKLOG.md  DESIGN.md  LENS_INTEGRATION_REPORT.md  agents-rfc.md  agents.md  architecture.md  batch-build-review.md  batch-build.md  build-phases.md  cache-semantics.md  cli-ux.md  code-first-pipeline-rfc-staff-review.md  code-first-pipeline-rfc.md  construct-library.md  demo-test-specs.md  deployment-plan.md  entity-model.md  epm-design-document.md  getting-started.md  handoff-projection-release-v2.md  incremental-fold-design.md  incremental-fold-redteam.md  integration.md  knowledge-server-architecture.md  knowledge-server-overhaul-plan.md  mcp.md  mesh-design-final-pass.md  mesh-design-rereview.md  mesh-design-review.md  mesh-design.md  mesh.md  migration-v2.md  parallel-layers-design.md  pipeline-api.md  projection-release-slice-rfc.md  projection-release-v2-rfc.md  prompt-templates.md  receipt-schema.md  red-team-prioritized-bug-report-2026-03-10.md  release-notes-v1.0.md  (+8 more)
docs/deploy/: pipeline.py  synix-server.toml
docs/issues/: fastembed-hang-23k-chunks.md
examples/01-chatbot-export-synthesis/: README.md  case.py  pipeline_monthly.py  pipeline_topical.py
examples/02-tv-returns/: case.py  fix_source.py  pipeline.py  show_pipeline.py  tape.tape
examples/03-team-report/: README.md  case.py
plugin/: .mcp.json  README.md  mcp_proxy.sh
plugin/.claude-plugin/: plugin.json
plugin/hooks/: hooks.json  session_end.sh  session_start.sh
scripts/: new-example  new-template  prerelease  sync-templates
src/synix/: __init__.py  agents.py  cli.py  config.py  dev.py  llms.txt  pipeline.py  sdk.py  workspace.py
templates/01-chatbot-export-synthesis/: README.md  case.py  pipeline_monthly.py  pipeline_topical.py  synix.toml
templates/02-tv-returns/: case.py  fix_source.py  pipeline.py  record.sh  show_pipeline.py  synix.toml  transforms.py
templates/03-team-report/: README.md  case.py  pipeline.py  synix.toml
templates/04-sales-deal-room/: case.py  copy_staged.py  pipeline.py  synix.toml  tape.tape  transforms.py
templates/05-batch-build/: case.py  pipeline.py  synix.toml
templates/06-claude-sessions/: synix.toml
templates/07-chunked-search/: case.py  synix.toml
templates/08-agent-memory/: README.md  synix.toml
templates/09-agent-driven/: case.py  case_live.py  pipeline.py  synix.toml
tests/: conftest.py  test_citation_fixer.py  test_citation_validator.py  test_citations.py
tests/e2e/: test_agent_pipeline.py  test_batch_build.py  test_build_release_revert.py  test_clean_releases.py  test_demo_1_personal.py  test_demo_2_startup.py  test_demo_3_incident.py  test_demo_3_team_report.py  test_demo_flow.py  test_diff_refs.py  test_diff_snapshot_era.py  test_mcp_agent.py  (+21 more)
(+487 files in other folders)
