[project]
name = "synix"
version = "0.1.0"
description = "A build system for agent memory"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Mark", email = "mark@example.com" }
]
keywords = ["agent", "memory", "build-system", "llm"]

dependencies = [
    "click>=8.0",
    "pydantic>=2.0",
    "rich>=13.0",
    "anthropic>=0.40.0",
]

[project.scripts]
synix = "synix.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
